switch base 64 decoder package